--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,5 @@ healthchecksdb
 **/appsettings.development.json
 **/appsettings.staging.json
 **/appsettings.production.json
+**/appsettings.json
+
